# dende-rs

./: CHANGELOG.md  Cargo.toml  HELP.md  README.md  config_example.yaml
.github/workflows/: build.yml
src/: args.rs  main.rs
src/modules/logwatcher/: events.rs  files.rs
src/notifiers/: mod.rs  textbelt.rs
